# WEB_hw8

./: pyproject.toml
1st_part/: README.md  main.py  models.py  seeds.py
2nd_part/: README.md  consumer.py  consumer_email.py  consumer_sms.py  models_contact.py  producer.py
