[tool.poetry]
name = "hw8"
version = "0.1.0"
description = ""
authors = ["Olha Lialina <145963563+olhalialina@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
redis = "^5.0.3"
redis-lru = "^0.1.2"
pika = "^1.3.2"
pymongo = "^4.6.2"
mongoengine = "^0.28.2"
faker = "^24.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
